--- a/biodata.html
+++ b/biodata.html
@@ -95,7 +95,7 @@
   </div>
   <div class="projects-gallery">
     <div class="project-item">
-      <img src="/image/Screenshot 2025-05-27 175327.png" alt="Project 1" />
+      <img src="image/Screenshot 2025-05-27 175327.png" alt="Project 1" />
     </div>
     </div>
   </div>
